# LucyServer

./: .gitignore  main.py  prompt.md  pyproject.toml  server.py
src/lucyserver/: __main__.py  chat.html  message.py  server.py  session.py
src/lucyserver/tools/: lclock.py  lhome.py  linternal.py  linternet.py  lspotify.py  ltime.py  lucy_module.py
src/lucyserver/voice/: elevenlabs.py  kokoro.py
tools/: lclock.py  lhome.py  linternal.py  linternet.py  lspotify.html  lspotify.py  ltime.py
